# ConvexLab

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: cache_warmup.yml  ci_guardian.yml  keep_alive.yml
app/: main.py
app/components/: charts.py
app/core/: analytics.py  data_fetcher.py
scripts/: wake_app.py
tests/: test_analytics.py
